[5.2.x] Fixed #36331 -- Reverted "Fixed #36055 -- Prevented overlap of object-tools buttons and page header in the admin."
This reverts commits b1324a680add78de24c763911d0eefa19b9263bc and
02a5cbfe76382da2a0414df17017185be5bd47f9. The former caused a regression
in admin sites that relied on the `object-tools` block being inside the
`content` block.

Thank you to Fabian Braun for the report.

Backport of 1bc805e23b73a580b82a1d416ab0fb59a1073047 from main.

--- a/django/contrib/admin/static/admin/css/base.css
+++ b/django/contrib/admin/static/admin/css/base.css
@@ -773,6 +773,7 @@ a.deletelink:focus, a.deletelink:hover {
     padding-left: 0;
     float: right;
     position: relative;
+    margin-top: -48px;
 }
 
 .object-tools li {
@@ -818,10 +819,6 @@ a.deletelink:focus, a.deletelink:hover {
 
 .object-tools a.addlink {
     background-image: url(../img/tooltag-add.svg);
-}
-
-.object-tools:has(a.addlink) {
-    margin-top: -48px;
 }
 
 /* OBJECT HISTORY */
